syntax = "proto3";
package tileGridProto;


message TexMap {
	uint32 offset = 1;
	uint32 tile_width = 2;
	uint32 tile_height = 3;
	string path = 4;
}

message Grid {
	string id = 1;
	uint32 grid_width = 2;
	uint32 grid_height = 3;
	uint32 chunk_width = 4;
	uint32 chunk_height = 5;

	repeated TexMap textures = 6;

	message ChunkEntry {
		uint32 x = 1;
		uint32 y = 2;
		uint32 tile_count = 3;
		uint32 tile_index = 4;
	}

	repeated ChunkEntry chunks = 7;

	message Tile {
		uint32 tileID = 1;
		uint32 x = 2;
		uint32 y = 3;
		uint32 attribs = 4;
	}

	repeated Tile tiles = 8;
}